Add heading element to ordered list

--- a/recipes/baked-brie.html
+++ b/recipes/baked-brie.html
@@ -19,7 +19,7 @@
                 <li>1 large egg</li>
                 <li>1 teaspoon water</li>
             </ul>
-
+            <h3 id="Directions">Directions</h3>
             <ol>
                 <li>Use a sharp paring knife to score the side of Brie all the way around, cutting directly on the equator through the rind. Wrap string or dental floss around brie on the scored cut. Loop one end of the string over the other to make a half knot. Pull the ends of the string in opposite directions to cut Brie in half.</li>
                 <li>Lay Brie halves, cut-side up, on a flat work surface. Spread cranberries over one half and walnuts on the other, pressing down gently into cheese. Quickly put the 2 sides back together with cranberries on top of walnuts. Press together and stuff back in any cranberries or walnuts that fell out.</li>
