Add ordered list for the recipe page.
I added an ordered list for the recipe page to give directions on how
cook the ravioli lasagna effectively in a crockpot.

--- a/recipes/ravioli-lasagna.html
+++ b/recipes/ravioli-lasagna.html
@@ -21,7 +21,11 @@
         
         <h3 id="Directions">Directions</h3>
             <ol>
-                <li></li>
+                <li>Spray the inside of the slow cooker with non stick cooking spray.</li>
+                <li>Brown the ground beef in a large skillet on the stove over medium-high heat. Drain fat if desired. Add the diced onion and cook for another 3-5 minutes until the onions are soft and translucent.</li>
+                <li>Place about a third of the spaghetti sauce in the bottom of a slow cooker.</li>
+                <li>Add half the ravioli in an even layer on top of the sauce. Top with half the meat mixture and half the remaining sauce.</li>
+                <li>Repeat layers, meat and sauce finishing with cheese. Cover and cook 2 ½ to three hours until the sauce is hot and bubbly and the cheese is cooked.</li>
             </ol>    
     </body>
 </html>
